# Better-MPEG-Compression

./: .gitignore  CMakeLists.txt  README.md  petey-convo.txt
compression_prototype/: CMakeLists.txt  README.md  bitpack.h  decoder.cpp  decoder1.cpp  encoder1.cpp  validate.cpp  wav_io.cpp
compression_prototype/src/: FFTProcessor.cpp  bitio.hpp  codebook.hpp  constants.hpp  decoder_main.cpp  psy.hpp  rice.hpp  woflcodec.cpp
curated-audio-compression/: CURATION_MANIFEST.json  README_CURATED.md
working-baseline/compression_prototype/: CMakeLists.txt  wav_io.h
working-baseline/compression_prototype/include/: FFTProcessor.h
working-baseline/compression_prototype/src/: analysis.hpp  bitstream.hpp  encoder_main.cpp  fft.hpp  mdct.hpp  parametric.hpp  residual.hpp  wav.hpp
working-basic/compression_prototype/: CMakeLists.txt  encoder.cpp
